<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.fragments.LearnFragment">


    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="140dp"
        android:layout_height="@dimen/margin_32"
        android:textSize="@dimen/small"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Greeting"
        android:textSize="@dimen/large_title"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary_dark"
        android:layout_marginStart="@dimen/margin_48"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learr"
        android:textSize="@dimen/medium"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_48"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"  />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLessons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_24"
        android:orientation="vertical"

        tools:listitem="@layout/lesson_item"
        app:layout_constraintBottom_toTopOf="@+id/btnToTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
        />



    <Button
        android:id="@+id/btnToTest"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/test_level"
        android:textSize="@dimen/medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_24"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




    <ProgressBar
        android:id="@+id/pbLearn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>