<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">



        <TextView
            android:id="@+id/tvAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_title"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary_dark"
            android:layout_marginEnd="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Greeting"
            android:textSize="@dimen/large_title"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary_dark"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="@dimen/medium"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGreeting"  />




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSteps"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            tools:itemCount="4"
            app:layout_constraintTop_toBottomOf="@id/tvTest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/steps_item_layout"
            android:layout_margin="@dimen/margin_24"/>



        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            app:layout_constraintTop_toBottomOf="@id/rvSteps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQuestions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            tools:itemCount="2"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
           android:layout_marginBottom="@dimen/margin_16"
            tools:listitem="@layout/question_item_layout"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            />


        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/medium"
            android:text="@string/next_part"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_24"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvQuestions"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
